--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pydantic_core==2.41.5
 pyodbc==5.3.0
 python-dotenv==1.2.1
 PyYAML==6.0.3
+PyJWT==2.9.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
